Fixing UI layout problems

--- a/src/index.css
+++ b/src/index.css
@@ -286,7 +286,7 @@ p {
 }
 
 .entityButton {
-  width: 100px;
+  width: 30%;
   padding-top: 0px;
   padding-bottom: 2px;
   margin-right: 0;
@@ -302,9 +302,11 @@ p {
   background-color: white;
   cursor: pointer;
   color: black;
+  font-weight: normal;
 }
 
 .entityDatePicker {
+  width: 30%;
   font-size:large;
   margin-left: 2px;
   padding-top: 0px;
